Helm mysql 서비스스 추가

--- a/01-infrastructure/01-service-resources/00-monolitic/.gitignore
+++ b/01-infrastructure/01-service-resources/00-monolitic/.gitignore
@@ -7,3 +7,8 @@ docker-compose/docker-compose.yml
 # MySQL directory
 docker-compose/mysql/
 
+# Helm generated files
+helm/everything/values.yaml
+helm/everything/charts/
+helm/everything/*.tgz
+helm/everything/Chart.lock
