--- a/01-infrastructure/01-service-resources/00-monolitic/helm/mysql/templates/pvc.yaml
+++ b/01-infrastructure/01-service-resources/00-monolitic/helm/mysql/templates/pvc.yaml
@@ -10,8 +10,9 @@ spec:
   accessModes:
     - {{ .Values.persistence.accessMode }}
   {{- if .Values.persistence.hostPath }}
-  # When using hostPath, bind to the specific PV
+  # When using hostPath, bind to the specific PV with matching storageClass
   volumeName: {{ include "mysql.fullname" . }}-pv
+  storageClassName: hostpath
   {{- else if .Values.persistence.storageClass }}
   storageClassName: {{ .Values.persistence.storageClass }}
   {{- end }}
