--- a/01-infrastructure/01-service-resources/00-monolitic/helm/mysql/values.yaml
+++ b/01-infrastructure/01-service-resources/00-monolitic/helm/mysql/values.yaml
@@ -36,7 +36,7 @@ resources:
 # PersistentVolumeClaim Configuration
 persistence:
   enabled: true
-  storageClass: ""
+  storageClass: "hostpath"
   accessMode: ReadWriteOnce
   size: 10Gi
   # HostPath for local development (optional)
