k8s 배포환경 구축 - 진행중..

--- a/01-infrastructure/03-stack-monolitic/templates/ingress.yaml
+++ b/01-infrastructure/03-stack-monolitic/templates/ingress.yaml
@@ -36,7 +36,7 @@ spec:
               service:
                 name: {{ printf "%s-%s" $.Release.Name "app-monolitic" | trunc 63 | trimSuffix "-" }}
                 port:
-                  number: {{ $.Values.app-monolitic.service.port }}
+                  number: {{ index $.Values "app-monolitic" "service" "port" }}
           {{- end }}
     {{- end }}
 {{- end }}
