Infra 기본 값 변경 (많은 환경에 호환 가능하도록)

--- a/01-infrastructure/01-mysql-mono/values.yaml
+++ b/01-infrastructure/01-mysql-mono/values.yaml
@@ -37,7 +37,7 @@ resources:
 persistence:
   enabled: true
   type: "storageClass"
-  storageClass: "standard"
+  storageClass: ""
   accessMode: ReadWriteOnce
   size: 10Gi
 
