--- a/02-backend/00-monolitic/src/main/resources/application.properties
+++ b/02-backend/00-monolitic/src/main/resources/application.properties
@@ -32,8 +32,11 @@ server.forward-headers-strategy=framework
 springdoc.api-docs.enabled=${API_DOCS_ENABLED:true}
 springdoc.override-with-generic-response=false
 springdoc.api-docs.path=/api-docs
+springdoc.use-fqn=true
 
 springdoc.swagger-ui.enabled=${SWAGGER_UI_ENABLED:true}
+springdoc.swagger-ui.doc-expansion=none
+springdoc.swagger-ui.tagsSorter=none
 
 # Redis Configuration
 spring.data.redis.host=${REDIS_HOST:localhost}
