[Feat] Add DB migration System (#8)
* 마이그레이션 도입 설계계

* Add 01-db-migrations Batch Backend

* Add Initial Migration Code

* Add Dockerfile and .dockerignore for backend database migrations

* Add SchemaValidationTest

* Set Open Session In View false

* Add db-migrations service to docker-compose for managing database migrations

* Make Test Module

* 로깅 개선 및 h2 DB 삭제제

* 통합 테스트 분리하기 위한 Annotation 추가가

* 통합 테스트를 위한 추상 클래스 선언언

* SchemaValidationTest를 삭제 (ApplicationIT가 동일한 역할을 함)

* ApplicationTest 삭제제

* TestController 테스트 개선선

* ResponseAssertions 추가가

* 유저 도메인 통합테스트 개선

* IntegrationTestUtils 추가가

* 유저 테스트 개선선

* AuthController테스트 개선선

* LoginFailure테스트 수정정

* ChatRoomController테스트 수정정

* 나머지 통합테스트 개선

* Chang UnitTestFiles to ~~~UT

* Fix Test

* Add MockK

* Update DDL Auto to Validate

* Add db-migration-batch helm

* Update Deploy Script

* Add helm-deploy mysql function

* add kubectl 명령어어

* Make Dockerfile Faster

* Update Docker-build-n-push to Print log in realtime

* Flyway working Test

* Fix Naming..

* DB Migration(Flyway) 추가 완료료

--- a/02-backend/00-monolitic/src/test/resources/application.properties
+++ b/02-backend/00-monolitic/src/test/resources/application.properties
@@ -2,28 +2,19 @@
 spring.application.name=00-monolitic
 spring.main.allow-bean-definition-overriding=true
 
-# H2 Database Configuration (In-Memory for Testing)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# JPA Configuration
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=validate
 
-# H2 Console (for development)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# P6Spy SQL Logging (enabled)
+decorator.datasource.p6spy.enable-logging=true
 
-# JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Security Auto Configuration Disabled for Tests
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+# Redis Command Logging (enabled)
+logging.level.io.lettuce.core.protocol=DEBUG
 
 # AuthToken Configuration (tests)
 authtoken.access-token-secret=please-change-me-please-change-me-please-change-me-32bytes
 authtoken.issuer=site.rahoon.message.test
 authtoken.access-token-ttl-seconds=3600
 authtoken.refresh-token-ttl-seconds=1209600
-
