--- a/02-backend/00-monolitic/src/main/resources/application.properties
+++ b/02-backend/00-monolitic/src/main/resources/application.properties
@@ -16,10 +16,11 @@ spring.datasource.hikari.max-lifetime=${DB_MAX_LIFETIME:1800000}
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO:update}
+spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO:validate}
 spring.jpa.show-sql=${DB_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=${DB_FORMAT_SQL:true}
 spring.jpa.properties.hibernate.use_sql_comments=${DB_USE_SQL_COMMENTS:true}
+spring.jpa.open-in-view=false
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
