Feat/message realtime (#11)
* 테스트 규칙에 맞춰 메시지 조회 인중 로직 변경 (optional -> required)

* 실시간 통신 최적화 (메시지 알림) 구현 목표 작성

* 메시지 생성 이벤트 추가가

* 비동기 처리를 위한 AysncConfig 추가가

* 웹소켓 설정 추가가

* Websocket 전송 메소드 추가가

* 테스트 코드 추가가

* Add SSE 구현현

* Fix Lint

* Fix Decekt

* Add Long Polling

* 세 방식 비교 방법 구체화화

* 연속 메시지 수신 지연 테스트트

* Update 패치노트트

* show-sql 옵션 default false로 설정정

* SSE와 Websocket을 위한 nginx config 추가가

* 부하 테스트 진행

* 부하테스트 결과 추가 및 최종 선택 추가가

* Add new documentation for improvements in login failure handling, message limits, lock mechanisms, and chatbot integration

* 실시간 통신 실제 도입 패치노트 작성성

* LongPolling과  SSE 제거거

* Remove LongPolling, SSE tests

* Add Websocket Heartbeat check

* 서버 업데이트시 로직 확인 및 개선선

* 테스트 환경 구축축

* 테스트용 application.properties 삭제 (필요한경우 DynamicProperty Source 사용)

* logger 사용하는 부분  override로 변경

* Async에 TaskPoolExecutor가 없는 것 확인하여 수정

* Redisson Config 추가 (Pubsub 편리하게 사용하기 위함)

* Application측 Event를 위한한 인터페이스 구현

* MessageEvent 인프라 구현현

* Redis이벤트에 따른 WebSocket 전송송 구현

* 관련 테스트 업데이트트

* 태스트 추가가

* 1차 배포 및 문서 업데이트트

* WebSocket 문서화 및 AsyncAPI 통합 구현. WebSocket STOMP API 스펙을 AsyncAPI 3.0 형식과 Web으로 제공하며, 관련 문서 및 UI 추가. WebSocket 연결 및 메시지 전송 기능 개선.

* SendTo가 별로여서 WebSocketSend AOP 만들고 AsyncApiFullGeneration에서 스캔하도록 변경경

* 작업 내용 추가가

* Fix Lint

* Fix Lint

* Deploy

--- a/02-backend/00-monolitic/docker-compose-nginx-template.conf
+++ b/02-backend/00-monolitic/docker-compose-nginx-template.conf
@@ -1,7 +1,68 @@
 server {
   listen 80;
   server_name _;
+  
+  # SSE 엔드포인트 (가장 구체적인 경로를 먼저)
+  location ${APP_PATH_PREFIX}/sse {
+    # 네트워크 지연 시뮬레이션
+    access_by_lua_block {
+      local delay_ms = ${NETWORK_DELAY_MS}
+      if delay_ms > 0 then
+        ngx.sleep(delay_ms / 1000)
+      end
+    }
+    
+    rewrite ^${APP_PATH_PREFIX}(.*)$ $1 break;
+    proxy_pass http://${APP_HOST}:${APP_PORT};
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    
+    # SSE 최적화 설정
+    proxy_http_version 1.1;
+    proxy_set_header Connection '';
+    proxy_buffering off;              # 프록시 버퍼링 완전 비활성화
+    proxy_cache off;                  # 캐시 비활성화
+    proxy_read_timeout 86400s;        # 24시간 타임아웃
+    chunked_transfer_encoding off;     # Chunked transfer 활성화
+  }
+  
+  # WebSocket 엔드포인트
+  location ${APP_PATH_PREFIX}/ws {
+    # 네트워크 지연 시뮬레이션
+    access_by_lua_block {
+      local delay_ms = ${NETWORK_DELAY_MS}
+      if delay_ms > 0 then
+        ngx.sleep(delay_ms / 1000)
+      end
+    }
+    
+    rewrite ^${APP_PATH_PREFIX}(.*)$ $1 break;
+    proxy_pass http://${APP_HOST}:${APP_PORT};
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    
+    # WebSocket 최적화 설정
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection upgrade;
+    proxy_read_timeout 86400s;        # 24시간 타임아웃
+    proxy_send_timeout 86400s;
+  }
+  
+  # 일반 REST API 엔드포인트
   location ${APP_PATH_PREFIX} {
+    # 네트워크 지연 시뮬레이션
+    access_by_lua_block {
+      local delay_ms = ${NETWORK_DELAY_MS}
+      if delay_ms > 0 then
+        ngx.sleep(delay_ms / 1000)
+      end
+    }
+    
     rewrite ^${APP_PATH_PREFIX}(.*)$ $1 break;
     proxy_pass http://${APP_HOST}:${APP_PORT};
     proxy_set_header Host $host;
@@ -11,6 +72,10 @@ server {
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Server $host;
     proxy_set_header X-Forwarded-Prefix ${APP_PATH_PREFIX};
+    
+    # 일반 HTTP 설정
+    proxy_http_version 1.1;
+    proxy_set_header Connection '';
+    proxy_read_timeout 30s;           # 일반 API는 30초 타임아웃
   }
 }
-
