--- a/02-backend/00-monolitic/src/main/resources/application.properties
+++ b/02-backend/00-monolitic/src/main/resources/application.properties
@@ -17,17 +17,27 @@ spring.datasource.hikari.max-lifetime=${DB_MAX_LIFETIME:1800000}
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO:validate}
-spring.jpa.show-sql=${DB_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${DB_FORMAT_SQL:true}
-spring.jpa.properties.hibernate.use_sql_comments=${DB_USE_SQL_COMMENTS:true}
+spring.jpa.show-sql=${DB_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${DB_FORMAT_SQL:false}
+spring.jpa.properties.hibernate.use_sql_comments=${DB_USE_SQL_COMMENTS:false}
 spring.jpa.open-in-view=false
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
 
 # Server Configuration
 server.forward-headers-strategy=framework
+server.tomcat.threads.max=${TOMCAT_MAX_THREADS:500}
+server.tomcat.threads.min-spare=${TOMCAT_MIN_SPARE_THREADS:10}
+server.tomcat.max-connections=${TOMCAT_MAX_CONNECTIONS:10000}
+
+# Graceful Shutdown Configuration (for Blue-Green deployment)
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=20s
 
 # SpringDoc OpenAPI Configuration
 springdoc.api-docs.enabled=${API_DOCS_ENABLED:true}
@@ -57,3 +67,19 @@ authtoken.refresh-token-ttl-seconds=${AUTHTOKEN_REFRESH_TOKEN_TTL_SECONDS:120960
 # Page Cursor Configuration
 page-cursor.secret=${PAGE_CURSOR_SECRET:}
 page-cursor.signature-enabled=${PAGE_CURSOR_SIGNATURE_ENABLED:false}
+
+# STOMP
+springwolf.enabled=true
+springwolf.path.d-e-f-a-u-l-t-b-a-s-e=/springwolf
+springwolf.docket.base-package=site.rahoon.message.monolithic
+springwolf.docket.info.title=Real-time Chat API
+springwolf.docket.info.version=1.0.0
+springwolf.docket.info.description=Redis Pub/Sub & Sticky Session
+springwolf.ui.defaults.show-bindings=false
+springwolf.ui.defaults.show-headers=false
+springwolf.docket.servers.production.protocol=stomp
+springwolf.docket.servers.production.host=${STOMP_HOST:127.0.0.1:8080/ws}
+springwolf.docket.servers.production.security[0].ref="bearerAuth"
+
+websocket.docs.enabled=true
+websocket.base-package="site.rahoon.message"
