Feat/logging format (#17)
* Update Json Formatting

* JSON 로깅 반영

* 환경별 로그 출력 형식 전략 수립

* MDC 기반 분산 추적 가능하게 구성 완료

* Scheduled 처리리

* Redisson topic listener 처리 완료료

* 민감정보마스킹규칙수립립

* HTTP Request 컨텍스트로깅 완료료

* HttpRequestObservationHandler 및 CommonAuthInfoArgumentResolver에서 사용자 및 클라이언트 정보를 포함한 MDC 로깅 기능 추가. 클라이언트 IP, 사용자 에이전트, 사용자 ID 및 세션 ID를 로깅하여 감사 및 디버깅을 개선.

* Update MDC logging to replace session_id with auth_session_id in CommonAuthInfoArgumentResolver and HttpRequestObservationHandler for improved clarity and consistency. Adjust documentation to reflect this change.

* Enhance WebSocket logging by adding websocket_command, websocket_session_id, and websocket_destination to MDC for improved traceability. Extend WebSocketTracingChannelInterceptor to manage these new fields, ensuring consistent logging across WebSocket messages. Update documentation to reflect these changes.

* Enhance WebSocket logging by adding websocket_start_time, websocket_end_time, and websocket_duration_ms to MDC for improved traceability. Update WebSocketTracingChannelInterceptor to manage these new fields and adjust logging levels for better clarity. Update documentation to reflect these changes.

* Refactor WebSocket MDC keys to use dot notation for improved consistency and clarity. Update WebSocketTracingChannelInterceptor and related documentation to reflect these changes.

* Enhance logging structure by adding detailed key decisions and impact analysis for JSON encoding, tracing, and context management. Update logging levels for HTTP and WebSocket to improve traceability and reduce log volume. Document future development goals for log collection stack and traffic handling strategies.

* Fix Detekt

* Fix Lint

--- a/02-backend/00-monolitic/src/main/resources/application.properties
+++ b/02-backend/00-monolitic/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=00-monolitic
 spring.main.allow-bean-definition-overriding=true
 
+# Logging: 기본 JSON. 평문 출력 시 LOGGING_FORMAT=plain 환경변수 또는 logging.format=plain
+logging.format=${LOGGING_FORMAT:json}
+# plain 포맷 시 traceId/spanId 6글자씩 (logback-spring.xml에서 springProperty로 참조)
+logging.pattern.console=%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr([%6.6X{traceId:-},%6.6X{spanId:-}]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
+
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME}?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -24,6 +29,10 @@ spring.jpa.open-in-view=false
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
+
+# Micrometer Tracing (trace_id/span_id MDC 주입, Loki 연동용)
+management.tracing.sampling.probability=1.0
+management.tracing.export.zipkin.enabled=false
 management.endpoint.health.show-details=when-authorized
 management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
@@ -83,5 +92,7 @@ springwolf.docket.servers.production.security[0].ref="bearerAuth"
 
 websocket.docs.enabled=true
 websocket.base-package="site.rahoon.message"
+# SimpleBroker heartbeat 및 세션 만료 검사 주기(ms). 기본 10초.
+websocket.heartbeat-interval-ms=${WEBSOCKET_HEARTBEAT_INTERVAL_MS:10000}
 # 만료 임박 임계(초). 만료 이전 이 값 이내면 갱신 유도 MESSAGE 전송. 기본 2분.
 websocket.imminent-threshold-seconds=${WEBSOCKET_IMMINENT_THRESHOLD_SECONDS:120}
