--- a/01-infrastructure/00-compose-all/docker-compose.yml
+++ b/01-infrastructure/00-compose-all/docker-compose.yml
@@ -131,6 +131,10 @@ services:
       DB_NAME: ${DB_NAME:-monolitic_db}
       DB_USERNAME: ${DB_USERNAME:-monolitic_user}
       DB_PASSWORD: ${DB_PASSWORD:-monolitic_password}
+      # compose 내부: redis 서비스명으로 연결 (.env의 localhost 무시)
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-}
       DB_MAX_POOL_SIZE: ${DB_MAX_POOL_SIZE:-10}
       DB_MIN_IDLE: ${DB_MIN_IDLE:-5}
       DB_CONNECTION_TIMEOUT: ${DB_CONNECTION_TIMEOUT:-30000}
@@ -142,6 +146,8 @@ services:
       DB_USE_SQL_COMMENTS: ${DB_USE_SQL_COMMENTS:-true}
     depends_on:
       mysql:
+        condition: service_healthy
+      redis:
         condition: service_healthy
       db-migrations:
         condition: service_completed_successfully
