--- a/05-scripts/01-deploy-compose-all/default.env
+++ b/05-scripts/01-deploy-compose-all/default.env
@@ -1,57 +1,32 @@
-# MySQL Database Configuration
-# Copy this file to .env and fill in the values
+# Copy to .env and customize
 
-# Database Connection
-DB_HOST=localhost
-DB_PORT=3306
+# MySQL
+MYSQL_ROOT_PASSWORD=rootpassword
 DB_NAME=monolitic_db
 DB_USERNAME=monolitic_user
 DB_PASSWORD=monolitic_password
 
-# MySQL Root Password (for docker-compose)
-MYSQL_ROOT_PASSWORD=rootpassword
-
-# Connection Pool Configuration (Optional - defaults shown)
+# Connection Pool
 DB_MAX_POOL_SIZE=10
 DB_MIN_IDLE=5
 DB_CONNECTION_TIMEOUT=30000
 DB_IDLE_TIMEOUT=600000
 DB_MAX_LIFETIME=1800000
 
-# JPA/Hibernate Configuration (Optional - defaults shown)
-DB_DDL_AUTO=validate
-DB_SHOW_SQL=false
-DB_FORMAT_SQL=false
-DB_USE_SQL_COMMENTS=false
+# JPA/Hibernate
+DB_DDL_AUTO=update
+DB_SHOW_SQL=true
+DB_FORMAT_SQL=true
+DB_USE_SQL_COMMENTS=true
 
-# Nginx Proxy Configuration (for docker-compose)
-# Nginx uses host.docker.internal to proxy to host machine (port 8080)
-# NGINX_PORT: Port for nginx to listen on (default: 80)
-NGINX_PORT=80
-
-# App Proxy Configuration (for nginx in docker-compose)
-# NGINX_APP_HOST: Host address for nginx to proxy to (default: 00-monolitic for docker-compose)
-NGINX_APP_HOST=00-monolitic
-# NGINX_APP_PORT: Port for the application (default: 8080)
-NGINX_APP_PORT=8080
-# NGINX APP_PATH_PREFIX: Path prefix to remove before forwarding (default: /api)
-NGINX_APP_PATH_PREFIX=/api
-
-# Redis Configuration
-REDIS_HOST=localhost
-REDIS_PORT=6379
+# Redis (compose 내부는 redis 서비스명 사용, 비밀번호만 여기서 설정)
 REDIS_PASSWORD=
 
-# JWT/AuthToken Configuration
-AUTHTOKEN_ACCESS_TOKEN_SECRET=please-change-me-please-change-me-please-change-me-32bytes
-AUTHTOKEN_ISSUER=site.rahoon.message
-AUTHTOKEN_ACCESS_TOKEN_TTL_SECONDS=3600 # 1 hour
-AUTHTOKEN_REFRESH_TOKEN_TTL_SECONDS=1209600 # 14 days
-
-# API Documentation Configuration (Optional - defaults shown)
-API_DOCS_ENABLED=true
-SWAGGER_UI_ENABLED=true
-
-# Page Cursor Configuration (Optional - defaults shown)
-PAGE_CURSOR_SECRET=
-PAGE_CURSOR_SIGNATURE_ENABLED=false
+# Nginx
+NGINX_PORT=80
+NGINX_APP_HOST=00-monolitic
+NGINX_APP_PORT=8080
+NGINX_APP_PATH_PREFIX=/api
+NGINX_LANDING_HOST=web-landing
+NGINX_LANDING_PORT=80
+NETWORK_DELAY_MS=50
