--- a/02-backend/00-monolitic/.gitignore
+++ b/02-backend/00-monolitic/.gitignore
@@ -18,7 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -42,3 +42,5 @@ out/
 ### Docker Data ###
 .data/
 .env
+
+.ai/
